tests/NormalTests/paczka1/fuzzy1/25309353.err
Error in line 16: RD2Sm1mTgK A382 7,4
Error in line 30: 2lBCJCLh2e A144 88,2
Error in line 33: A144 A382 93,8
Error in line 22: Ohx S436 0,3
